--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="access.com.mvc" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin
+    id="cordova-plugin-mvc" version="0.0.2"
+    xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
   <name>mvc</name>
   <js-module name="mvc" src="www/mvc.js">
     <clobbers target="mvc" />
