--- a/plugin.xml
+++ b/plugin.xml
@@ -6,6 +6,7 @@
   <js-module name="mvc" src="www/mvc.js">
     <clobbers target="mvc" />
   </js-module>
+
   <platform name="android">
     <config-file parent="/*" target="res/xml/config.xml">
       <feature name="mvc"><param name="android-package" value="access.com.mvc.mvc" /></feature>
@@ -13,9 +14,26 @@
     <config-file parent="/*" target="AndroidManifest.xml" />
     <source-file src="src/android/mvc.java" target-dir="src/access/com/mvc/mvc" />
   </platform>
+
   <platform name="ios">
     <config-file parent="/*" target="config.xml">
-      <feature name="mvc"><param name="ios-package" value="mvc" /></feature>
-      </config-file><source-file src="src/ios/mvc.m" />
+      <feature name="mvc">
+        <param name="ios-package" value="mvc" />
+      </feature>
+    </config-file>
+    <source-file src="src/ios/mvc.m" />
   </platform>
+
+  <platform name="browser">
+    <config-file target="config.xml" parent="/*">
+      <feature name="mvc">
+        <param name="browser-package" value="mvc" />
+      </feature>
+    </config-file>
+
+    <js-module src="src/browser/mvc_proxy.js" name="mvcProxy">
+      <runs />
+    </js-module>
+  </platform>
+
 </plugin>
